feat: add properties config

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/AppCard.razor
@@ -43,7 +43,7 @@
     public List<EnvironmentClusterModel> EnvironmentClusters { get; set; } = new();
 
     [Parameter]
-    public AppDto App { get; set; } = new();
+    public Model.AppModel App { get; set; } = new();
 
     [Parameter]
     public bool ShowEditInfo { get; set; }
