--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -1,25 +1,23 @@
-﻿@page "/Config"
+﻿@page "/{AppId:int}/{EnvironmentClusterId:int}/{ConfigObjectType:int}/Config"
+@inherits MasaCompontentBase;
 
 <div class="d-flex">
     <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 180px);">
         <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto; height: calc(100vh - 218px);">
             <div style="width:100%;" class="text-body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
-                    <div class="text-h6">@AppDetail.Name</div>
+                    <div class="text-h6">@_appDetail.Name</div>
                     <MButton Icon>
                         <MIcon Color="black">mdi-dots-horizontal</MIcon>
                     </MButton>
                 </MRow>
                 <MRow NoGutters Class="text-caption">
-                    @AppDetail.Identity
+                    @_appDetail.Identity
                 </MRow>
                 <MRow NoGutters Class="mt-4">
-                    @AppDetail.Description
+                    @_appDetail.Description
                 </MRow>
                 <MRow NoGutters Class="text-caption mt-6">@T("Environment")</MRow>
-                @{
-                    var envCluster = _allEnvClusters.Where(envCluster => AppDetail.EnvironmentClusters.Select(ec => ec.Id).Contains(envCluster.Id));
-                }
                 <MRow NoGutters>
                     <MChipGroup Column>
                         @foreach (var item in _appEnvs)
@@ -36,7 +34,7 @@
                 <MRow NoGutters Class="text-caption mt-6">@T("Cluster")</MRow>
                 <MRow NoGutters>
                     <MChipGroup Column>
-                        @foreach (var item in _appEnvClusters)
+                        @foreach (var item in _appClusters)
                         {
                             var isSelected = _selectCluster.ClusterName == item.ClusterName;
                             var textColor = isSelected ? "white" : "";
@@ -61,7 +59,7 @@
     <div class="pl-6" style="width: calc(100% - 300px); display:block;">
         <div class="rounded-5 pa-6" style="background:#fff;overflow: hidden;">
             <div class="d-flex mb-6">
-                <MTextField @bind-Value="_projectName" OnKeyDown="SearchProject" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the config name and press enter to query")">
+                <MTextField @bind-Value="_configObjectName" OnKeyDown="SearchConfigObjectAsync" Class="rounded-2" Height="40" Flat Dense Solo BackgroundColor="fill-lighten-1" HideDetails="@("auto")" Placeholder="@T("Please enter the config name and press enter to query")">
                     <PrependInnerContent>
                         <MIcon Size=16 Class="mr-2 neutral-lighten-1--text">mdi-magnify</MIcon>
                     </PrependInnerContent>
@@ -116,7 +114,7 @@
                                 </MExpansionPanelContent>
                             </MExpansionPanel>
                         }
-                        else if (formatLabelCode == "properties")
+                        else if (formatLabelCode == "properties1")
                         {
                             <MExpansionPanel>
                                 <MExpansionPanelHeader Context="_">
@@ -252,4 +250,49 @@
         </div>
     </div>
 </div>
+
+<SheetDialog @bind-Value="_addConfigObjectModal.Visible" Title="@T("Create config object")" Icon="mdi-circle" IconColor="success">
+    <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
+        <div>
+            <div class="text-h6">Application  |  identity</div>
+            <MTextField Class="mt-12" Dense Label="名称" Outlined @bind-Value="_addConfigObjectModal.Data.Name"></MTextField>
+            <MSelect @bind-Value="_addConfigObjectModal.Data.FormatLabelCode"
+                     Label="格式"
+                     MenuProps="props => props.OffsetY = true"
+                     Outlined
+                     Dense
+                     Items="_configObjectFormats"
+                     ItemText="l=>l.Name"
+                     ItemValue="l=>l.Code">
+            </MSelect>
+            <p class="neutral--text" style="font-size:14px; font-weight:700;">选择集群</p>
+            <MChipGroup Multiple Column @bind-Values="_selectEnvClusterIds">
+                @foreach (var item in _appDetail.EnvironmentClusters)
+                {
+                    <MChip Value="item.Id" Large Class="envClusterChip mr-6 mb-6" Filter Outlined ActiveClass="@($"{item.EnvironmentColor}")">
+                        <div class="@($"{item.EnvironmentColor}--text")">@item.EnvironmentName</div>&nbsp;&nbsp;
+                        <div style="color:#05CD99">@item.ClusterName</div>
+                    </MChip>
+                }
+            </MChipGroup>
+        </div>
+        <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
+            <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="AddConfigObject">提交</MButton>
+        </div>
+    </div>
+</SheetDialog>
+
+<SheetDialog @bind-Value="_propertyConfigModal.Visible" Title="@T("Create config object item")" Icon="mdi-circle" IconColor="success">
+    <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
+        <div>
+            <div class="text-h6">配置对象  |  Properties</div>
+            <MTextField Class="mt-12" Disabled="_propertyConfigModal.HasValue" Dense Label="Key" Outlined @bind-Value="_propertyConfigModal.Data.Key"></MTextField>
+            <MTextField Dense Label="Value" Outlined @bind-Value="_propertyConfigModal.Data.Value"></MTextField>
+            <MTextarea Label="Description" Dense Outlined @bind-Value="_propertyConfigModal.Data.Description"></MTextarea>
+        </div>
+        <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
+            <MButton Class="rounded-pill" Color="primary" Width="100" OnClick="SubmitPropertyConfigAsync">提交</MButton>
+        </div>
+    </div>
+</SheetDialog>
 
